Adicionando index.html para o GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro GitHub Page</title>
+    <title>Meu Site no GitHub Pages</title>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
-    <p>Esta é minha primeira página no GitHub Pages.</p>
+    <p>Este é meu primeiro site hospedado no GitHub Pages.</p>
 </body>
 </html>
