--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site no GitHub Pages</title>
+    <title>Meu Portfólio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Olá, Mundo!</h1>
-    <p>Este é meu primeiro site hospedado no GitHub Pages.</p>
+<body class="bg-gray-900 text-white">
+
+    <!-- Layout Principal -->
+    <div class="flex flex-col md:flex-row h-screen">
+        
+        <!-- Sidebar Esquerda -->
+        <aside class="w-full md:w-1/4 bg-gray-800 p-6 flex flex-col items-center text-center md:text-left">
+            <img src="foto-rosto-perfil.png" alt="Foto de Perfil" class="w-32 h-32 rounded-full border-4 border-gray-600">
+            <h1 class="text-2xl font-bold mt-4">Gustavo Caminiti</h1>
+            <p class="text-gray-400">Desenvolvedor Full Stack Jr.</p>
+
+            <div class="mt-4 flex space-x-4">
+                <a href="https://github.com/seu-username" class="text-gray-300 hover:text-white">GitHub</a>
+                <a href="https://linkedin.com/in/seu-username" class="text-gray-300 hover:text-white">LinkedIn</a>
+                <a href="mailto:email@email.com" class="text-gray-300 hover:text-white">E-mail</a>
+            </div>
+        </aside>
+
+        <!-- Conteúdo Principal -->
+        <main class="w-full md:w-3/4 p-8 overflow-auto">
+            
+            <!-- Botão de Menu (aparece só no mobile) -->
+            <button id="menu-btn" class="md:hidden bg-gray-700 text-white px-4 py-2 rounded mb-4">
+                ☰ Menu
+            </button>
+
+            <section id="sobre">
+                <h2 class="text-3xl font-bold">Sobre Mim</h2>
+                <p class="mt-2 text-gray-400">Sou um desenvolvedor apaixonado por tecnologia, com experiência em JavaScript, Node.js, React e bancos de dados MySQL.</p>
+            </section>
+
+            <section id="habilidades" class="mt-8">
+                <h2 class="text-3xl font-bold">Habilidades</h2>
+                <ul class="mt-2 text-gray-400">
+                    <li>✔️ JavaScript, HTML, CSS</li>
+                    <li>✔️ Node.js, Express, MySQL</li>
+                    <li>✔️ React.js, Tailwind CSS</li>
+                    <li>✔️ Git, GitHub, Docker</li>
+                </ul>
+            </section>
+
+            <section id="projetos" class="mt-8">
+                <h2 class="text-3xl font-bold">Projetos</h2>
+                <div class="mt-4 space-y-4">
+                    <div class="bg-gray-800 p-4 rounded">
+                        <h3 class="text-xl font-semibold">Projeto 1</h3>
+                        <p class="text-gray-400">Descrição breve do projeto.</p>
+                        <a href="#" class="text-blue-400 hover:underline">Ver no GitHub</a>
+                    </div>
+                    <div class="bg-gray-800 p-4 rounded">
+                        <h3 class="text-xl font-semibold">Projeto 2</h3>
+                        <p class="text-gray-400">Descrição breve do projeto.</p>
+                        <a href="#" class="text-blue-400 hover:underline">Ver no GitHub</a>
+                    </div>
+                </div>
+            </section>
+
+            <section id="contato" class="mt-8">
+                <h2 class="text-3xl font-bold">Contato</h2>
+                <p class="mt-2 text-gray-400">Entre em contato pelo e-mail <a href="mailto:email@email.com" class="text-blue-400">email@email.com</a></p>
+            </section>
+        </main>
+    </div>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
