Atualizacao do link da tese do doutorado

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <li><strong>Administração de Empresas</strong> – 2003, Universidade de Ribeirão Preto (UNAERP)</li>
           <li><strong>Engenharia da Computação</strong> – Previsão de Conclusão: 2029</li>
-          <li><strong>Doutorado em Ciência</strong> – 2015, Universidade de São Paulo (USP-RP)<br> (Descritores da tese: Dengue, Epidemiologia, Saúde Pública, Análise Estatística e Análise Espacial.)</li>
+          <li><strong>Doutorado em Ciência</strong> – 2015, Universidade de São Paulo (USP-RP)<br> (Descritores da tese: Dengue, Epidemiologia, Saúde Pública, Análise Estatística e Análise Espacial.) <a href="https://teses.usp.br/teses/disponiveis/22/22133/tde-09102015-153057/publico/GustavoBussiCaminiti.pdf">Link da tese - Clique aqui</a></li>
         </ul>
       </section>
 
